# lzma-rust2

./: CHANGELOG.md  Cargo.toml
.github/workflows/: cifuzz.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lzip.rs  lzma.rs  lzma2.rs  xz.rs
src/: lzma2_reader.rs  lzma_reader.rs
src/lz/: lz_decoder.rs  lz_encoder.rs
